--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
     <version>2.3.4.RELEASE</version>
 </dependency>
 		
+		
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger-ui</artifactId>
+    <version>2.9.2</version>
+</dependency>
+
+<dependency>
+   <groupId>io.springfox</groupId>
+   <artifactId>springfox-bean-validators</artifactId>
+   <version>2.9.2</version>
+</dependency>
+		
+		
 <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 		<dependency>
 			<groupId>io.springfox</groupId>
